--- a/package.json
+++ b/package.json
@@ -2,5 +2,7 @@
 	"name": "fmentor-article-preview-php",
 	"private": true,
 	"version": "1.0.0",
-	"type": "module"
+	"type": "module",
+	"author": "alex <al3xback@gmail.com>",
+	"license": "ISC"
 }
